header backdrop increased, z-index incresed to prevent overlapping with cardCover for hovering events

--- a/src/Styles/Header.module.css
+++ b/src/Styles/Header.module.css
@@ -1,6 +1,6 @@
 .blur, .header {
-    backdrop-filter: blur( 10px );
-    -webkit-backdrop-filter: blur( 10px );
+    backdrop-filter: blur( 60px );
+    -webkit-backdrop-filter: blur( 60px );
 }
 
 .link, .activeLink {
@@ -14,6 +14,7 @@
 }
 
 .header {
+    z-index: 200;
     width: 100%;
     position: sticky;
     top: 0px;
